use iso dates in logger & cleanup
