# swagger.yaml
@@ -140,7 +140,7 @@ paths:
                   properties:
                     name:
                       type: string
-                    percentage:
+                    percentageFill:
                       type: number
 
   /percentage/{trashcanName}:
@@ -164,7 +164,7 @@ paths:
                 properties:
                   name:
                     type: string
-                  percentage:
+                  percentageFill:
                     type: number
         '404':
           description: Not Found
@@ -185,13 +185,18 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    date:
-                      type: string
-                    percentage:
-                      type: number
+                type: object
+                properties:
+                  name:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        date:
+                          type: string
+                        percentageFill:
+                          type: number
         '404':
           description: Not Found
